# ChangeLog for net-libs/libgsasl
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libgsasl/ChangeLog,v 1.8 2004/11/27 12:34:15 ticho Exp $

  27 Nov 2004; Andrej Kacian <ticho@gentoo.org> libgsasl-0.1.4.ebuild:
  Stable on x86.

*libgsasl-0.2.0 (13 Nov 2004)

  13 Nov 2004; Tom Martin <slarti@gentoo.org> metadata.xml,
  libgsasl-0.1.4.ebuild, +libgsasl-0.2.0.ebuild:
  Taking over as maintainer. Version bump -> 0.2.0.

*libgsasl-0.1.4 (11 Oct 2004)

  11 Oct 2004; Tom Martin <slarti@gentoo.org> libgsasl-0.1.1.ebuild,
  +libgsasl-0.1.4.ebuild:
  Marked 0.1.1 stable on amd64, version bumped -> 0.1.4.

  09 Jul 2004; Michael Hanselmann <hansmi@gentoo.org> libgsasl-0.1.1.ebuild:
  Added to ~ppc.

  07 Jul 2004; Tom Martin <slarti@gentoo.org> libgsasl-0.1.1.ebuild:
  Added to ~amd64.

  06 Jul 2004; <langthang@gentoo.org> libgsasl-0.1.1.ebuild:
  added PROVIDE virtual/gsasl, changed description, re-keyword.

*libgsasl-0.1.1 (05 Jul 2004)

  05 Jul 2004; <langthang@gentoo.org> +metadata.xml, +libgsasl-0.1.1.ebuild:
  New ebuild, bug #56015.
